--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KakaoMap</title>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7b9b3b22841bc36cd2d72c65ec742472"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <div id="map"></div>
+    <button class="geolocation_button">현 위치 조회하기</button>
+    <script src="main.js"></script>
+  </body>
 </html>
